Some changes in HTML file

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h3>Hello, my name is</h3>
         <h1>Shivam Sikdar</h1>
         <h4>And I'm a <span id="type1" class="typeit"></span></h4>
-        <a href="http://linkedin.com/in/dharanii">Hire me</a>
+        <a href="https://www.linkedin.com/in/shivam-sikdar-b5022316b/">Hire me</a>
       </div>
 
       <!-- color control -->
